--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,8 +1,8 @@
 name: example
 description: Widget and function to implement hashtag-decorated EditableText and RichText. Decorate the words which start with `#`
 version: 1.0.0
-homepage: https://github.com/santa112358/hashtagable
-repository: https://github.com/santa112358/hashtagable
+homepage: https://pub.dev/packages/hashtagable_v3
+repository: https://github.com/emmanuel-montoya/hashtagable_v3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -17,43 +17,8 @@ dev_dependencies:
     sdk: flutter
 
 dependency_overrides:
-  hashtagable:
+  hashtagable_v3:
     path: ../
-
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
-# To add assets to your package, add an assets section, like this:
-# assets:
-#  - images/a_dot_burr.jpeg
-#  - images/a_dot_ham.jpeg
-#
-# For details regarding assets in packages, see
-# https://flutter.dev/assets-and-images/#from-packages
-#
-# An image asset can refer to one or more resolution-specific "variants", see
-# https://flutter.dev/assets-and-images/#resolution-aware.
-
-# To add custom fonts to your package, add a fonts section here,
-# in this "flutter" section. Each entry in this list should have a
-# "family" key with the font family name, and a "fonts" key with a
-# list giving the asset and other descriptors for the font. For
-# example:
-# fonts:
-#   - family: Schyler
-#     fonts:
-#       - asset: fonts/Schyler-Regular.ttf
-#       - asset: fonts/Schyler-Italic.ttf
-#         style: italic
-#   - family: Trajan Pro
-#     fonts:
-#       - asset: fonts/TrajanPro.ttf
-#       - asset: fonts/TrajanPro_Bold.ttf
-#         weight: 700
-#
-# For details regarding fonts in packages, see
-# https://flutter.dev/custom-fonts/#from-packages
